Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
11.1.2, 11.2.1, 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL)
-
Ubuntu 20.04 x86-64, docker image mariadb:11.1.2
-
Can result in hang or crash
Description
PoC:
SELECT ( WITH RECURSIVE x AS ( SELECT * FROM ( SELECT UTC_TIMESTAMP FROM ( SELECT ( WITH x AS ( WITH x AS ( SELECT * FROM x ) SELECT 1 ) SELECT 1 ) ) x ) x UNION SELECT NULL ) ( SELECT x FROM x ) ) ; |
docker log:
mariadbd(my_print_stacktrace+0x32)[0x55adc19e47c2]
|
mariadbd(handle_fatal_signal+0x488)[0x55adc14bdcf8]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x7f586a2a9520]
|
mariadbd(_ZN10TABLE_LIST17reset_const_tableEv+0x55)[0x55adc134d805]
|
mariadbd(_Z22setup_table_attributesP3THDP10TABLE_LISTS2_Rj+0xbd)[0x55adc11dd4dd]
|
mariadbd(_Z12setup_tablesP3THDP23Name_resolution_contextP4ListI10TABLE_LISTEPS4_RS5_bb+0xfe)[0x55adc11dd6be]
|
mariadbd(_Z29setup_tables_and_check_accessP3THDP23Name_resolution_contextP4ListI10TABLE_LISTEPS4_RS5_b11privilege_tS9_b+0x34)[0x55adc11ddbb4]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0x28e)[0x55adc12b6a7e]
|
mariadbd(_ZN18st_select_lex_unit12prepare_joinEP3THDP13st_select_lexP13select_resultyb+0x414)[0x55adc131dc14]
|
mariadbd(_ZN18st_select_lex_unit7prepareEP10TABLE_LISTP13select_resulty+0x10c7)[0x55adc1321357]
|
mariadbd(+0x7ed21f)[0x55adc120521f]
|
mariadbd(_Z27mysql_handle_single_derivedP3LEXP10TABLE_LISTj+0xda)[0x55adc1203e7a]
|
mariadbd(_ZN13st_select_lex14handle_derivedEP3LEXj+0x47)[0x55adc1222697]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0x20f)[0x55adc12b69ff]
|
mariadbd(_ZN18st_select_lex_unit12prepare_joinEP3THDP13st_select_lexP13select_resultyb+0x414)[0x55adc131dc14]
|
mariadbd(_ZN18st_select_lex_unit7prepareEP10TABLE_LISTP13select_resulty+0x79b)[0x55adc1320a2b]
|
mariadbd(_ZN12With_element20prepare_unreferencedEP3THD+0x88)[0x55adc1428598]
|
mariadbd(_ZN11With_clause29prepare_unreferenced_elementsEP3THD+0x5c)[0x55adc142863c]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0xd56)[0x55adc12b7546]
|
mariadbd(_ZN18st_select_lex_unit12prepare_joinEP3THDP13st_select_lexP13select_resultyb+0x414)[0x55adc131dc14]
|
mariadbd(_ZN18st_select_lex_unit7prepareEP10TABLE_LISTP13select_resulty+0x79b)[0x55adc1320a2b]
|
mariadbd(_ZN12With_element20prepare_unreferencedEP3THD+0x88)[0x55adc1428598]
|
mariadbd(_ZN11With_clause29prepare_unreferenced_elementsEP3THD+0x5c)[0x55adc142863c]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0xd56)[0x55adc12b7546]
|
mariadbd(+0xb8b908)[0x55adc15a3908]
|
mariadbd(_ZN14Item_subselect10fix_fieldsEP3THDPP4Item+0x1ad)[0x55adc15a2fcd]
|
mariadbd(_Z12setup_fieldsP3THD20Bounds_checked_arrayIP4ItemER4ListIS2_E17enum_column_usagePS6_S9_b+0x147)[0x55adc11dd0a7]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0x52d)[0x55adc12b6d1d]
|
mariadbd(_ZN18st_select_lex_unit12prepare_joinEP3THDP13st_select_lexP13select_resultyb+0x414)[0x55adc131dc14]
|
mariadbd(_ZN18st_select_lex_unit7prepareEP10TABLE_LISTP13select_resulty+0x79b)[0x55adc1320a2b]
|
mariadbd(+0x7ed21f)[0x55adc120521f]
|
mariadbd(_Z27mysql_handle_single_derivedP3LEXP10TABLE_LISTj+0xda)[0x55adc1203e7a]
|
mariadbd(_ZN13st_select_lex14handle_derivedEP3LEXj+0x47)[0x55adc1222697]
|
mariadbd(_ZN10TABLE_LIST14handle_derivedEP3LEXj+0x56)[0x55adc134d776]
|
mariadbd(_ZN13st_select_lex14handle_derivedEP3LEXj+0x47)[0x55adc1222697]
|
mariadbd(_ZN10TABLE_LIST14handle_derivedEP3LEXj+0x56)[0x55adc134d776]
|
mariadbd(_ZN13st_select_lex14handle_derivedEP3LEXj+0x47)[0x55adc1222697]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0x20f)[0x55adc12b69ff]
|
mariadbd(+0xb8b908)[0x55adc15a3908]
|
mariadbd(_ZN14Item_subselect10fix_fieldsEP3THDPP4Item+0x1ad)[0x55adc15a2fcd]
|
mariadbd(_Z12setup_fieldsP3THD20Bounds_checked_arrayIP4ItemER4ListIS2_E17enum_column_usagePS6_S9_b+0x147)[0x55adc11dd0a7]
|
mariadbd(_ZN4JOIN7prepareEP10TABLE_LISTP4ItemjP8st_orderbS5_S3_S5_P13st_select_lexP18st_select_lex_unit+0x52d)[0x55adc12b6d1d]
|
mariadbd(_Z12mysql_selectP3THDP10TABLE_LISTR4ListI4ItemEPS4_jP8st_orderS9_S7_S9_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x624)[0x55adc12cb474]
|
mariadbd(_Z13handle_selectP3THDP3LEXP13select_resulty+0x154)[0x55adc12cb774]
|
mariadbd(+0x826f55)[0x55adc123ef55]
|
mariadbd(_Z21mysql_execute_commandP3THDb+0x419e)[0x55adc124df0e]
|
mariadbd(_Z11mysql_parseP3THDPcjP12Parser_state+0x1e7)[0x55adc124f237]
|
mariadbd(_Z16dispatch_command19enum_server_commandP3THDPcjb+0x14bd)[0x55adc1251a1d]
|
mariadbd(_Z10do_commandP3THDb+0x138)[0x55adc1253818]
|
mariadbd(_Z24do_handle_one_connectionP7CONNECTb+0x3bf)[0x55adc137b3af]
|
mariadbd(handle_one_connection+0x5d)[0x55adc137b6fd]
|
mariadbd(+0xcd1906)[0x55adc16e9906]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x94b43)[0x7f586a2fbb43]
|
/lib/x86_64-linux-gnu/libc.so.6(clone+0x44)[0x7f586a38cbb4]
|
 |
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7f580c0130d8): SELECT ( WITH RECURSIVE x AS ( SELECT * FROM ( SELECT UTC_TIMESTAMP FROM ( SELECT ( WITH x AS ( WITH x AS ( SELECT * FROM x ) SELECT 1 ) SELECT 1 ) ) x ) x UNION SELECT NULL ) ( SELECT x FROM x ) )
|
 |
Connection ID (thread ID): 4
|
Status: NOT_KILLED
|
 |
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off,hash_join_cardinality=on
|
Attachments
Issue Links
- relates to
-
MDEV-37119 mtr --view prints Name_exp_1 instead of query body for scalar subquery
-
- Closed
-